課題12までの文字コードを修正

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,2 @@
 eclipse.preferences.version=1
-encoding//src/Kadai01.java=MS932
-encoding//src/Kadai02.java=MS932
-encoding//src/Kadai03.java=MS932
+encoding/<project>=UTF-8
